# bugs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
0.23/: bugs.c
0.24/: bugs.c
0.25/: bugs.c
0.26/: bugs.c
0.27/: bugs.c
0.28/: bugs.c
0.29/: bugs.c
crates/bugs-cli/: Cargo.toml
crates/bugs-cli/src/: main.rs
crates/bugs-core/: Cargo.toml
crates/bugs-core/src/: bug.rs  constants.rs  gene.rs  lib.rs  rng.rs  simulation.rs  world.rs
crates/bugs-recorder/: Cargo.toml
crates/bugs-recorder/src/: event.rs  lib.rs  reader.rs  snapshot.rs  writer.rs
crates/bugs-render/: Cargo.toml
crates/bugs-render/src/: graph.rs  lib.rs
crates/bugs-viewer-native/: Cargo.toml
crates/bugs-viewer-native/src/: main.rs
crates/bugs-viewer-web/: Cargo.toml  README.md  index.html
crates/bugs-viewer-web/src/: lib.rs
