[workspace]
members = [
    "crates/bugs-core",
    "crates/bugs-recorder",
    "crates/bugs-render",
    "crates/bugs-cli",
    "crates/bugs-viewer-native",
    "crates/bugs-viewer-web",
]
resolver = "2"

[workspace.package]
version = "0.29.0"
edition = "2021"
authors = ["Bugs Evolution Project"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
