[package]
name = "bugs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bugs"
path = "src/main.rs"

[dependencies]
bugs-core = { path = "../bugs-core" }
bugs-recorder = { path = "../bugs-recorder" }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
