[package]
name = "bugs-viewer-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bugs-viewer"
path = "src/main.rs"

[dependencies]
bugs-core = { path = "../bugs-core" }
bugs-recorder = { path = "../bugs-recorder" }
bugs-render = { path = "../bugs-render" }
wgpu = "0.19"
winit = "0.29"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
pollster = "0.3"
