[package]
name = "bugs-viewer-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bugs-core = { path = "../bugs-core" }
bugs-recorder = { path = "../bugs-recorder" }
bugs-render = { path = "../bugs-render" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"] }
console_error_panic_hook = "0.1"
